[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medcheck"
version = "1.0.0"
description = "MedCheck - Prescription Error Detector OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "main:app"